force-app/main/default/objects/Transfer_Line_Item__c/Transfer_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Transfer Line Item</label>
    <nameField>
        <label>Transfer Line Item  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>