force-app/main/default/objects/Transfer_Line_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Transfer Line Item</relationshipLabel>
    <relationshipName>Transfer_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>