force-app/main/default/objects/Transfer_Line_Item__c/fields/Inventory_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Warehouse</label>
    <referenceTo>Inventory_Warehouse__c</referenceTo>
    <relationshipLabel>Transfer Line Item</relationshipLabel>
    <relationshipName>Transfer_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>