force-app/main/default/objects/Transfer_Line_Item__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transfer Line Item</relationshipLabel>
    <relationshipName>Transfer_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>